--- a/styles.css
+++ b/styles.css
@@ -45,7 +45,7 @@ body{
 #main .tool{
     background-color: #222831;
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
 }
 #main .tool i{
     padding: 5px;
@@ -57,8 +57,11 @@ body{
 #main .tool i:hover{
     color: #aca1a1;
 }
+#main .tool .icon{
+    display: flex;
+}
 
-.note textarea{
+.note .textarea textarea{
     width: 300px;
     border: none;
     min-height: 220px;
@@ -72,4 +75,16 @@ body{
 
 .note textarea:focus{
     outline: none;
+}
+
+.note .name textarea{
+    height: 25px;
+    resize: none;
+    border: none;
+    padding: 5px 10px 5px;
+    overflow: hidden;
+    font-size: 15px;
+    font-family: Arial;
+    background: none;
+    color: #fff;
 }
