--- a/styles.css
+++ b/styles.css
@@ -46,6 +46,7 @@ body{
     background-color: #222831;
     display: flex;
     justify-content: space-between;
+    width: 100%;
 }
 #main .tool i{
     padding: 5px;
@@ -59,6 +60,7 @@ body{
 }
 #main .tool .icon{
     display: flex;
+    width: 30%;
 }
 
 .note .textarea textarea{
@@ -75,7 +77,11 @@ body{
 .note textarea:focus{
     outline: none;
 }
+.note .name{
+    width: 70%;
+}
 .note .name textarea{
+    width: 100%;
     height: 25px;
     resize: none;
     border: none;
